<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CONFÉRENCE HERMES ECNI</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="login_info_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="login_alert">L\'identifiant  et le mot de passe sont obligatoire.</string>
    <string name="connection_alert">Vous n\'êtes pas connecté à internet. Vos réponses  à l\'examen seront envoyées une fois que vous  serez conecté.</string>

    <!-- Calendar -->
    <!-- P.M -->
    <string name="time1pm">1 P.M</string>
    <string name="time2pm">2 P.M</string>
    <string name="time3pm">3 P.M</string>
    <string name="time4pm">4 P.M</string>
    <string name="time5pm">5 P.M</string>
    <string name="time6pm">6 P.M</string>
    <string name="time7pm">7 P.M</string>
    <string name="time8pm">8 P.M</string>
    <string name="time9pm">9 P.M</string>
    <string name="time10pm">10 P.M</string>
    <string name="time11pm">11 P.M</string>
    <string name="time12pm">12 P.M</string>
    <!-- A.M -->
    <string name="time1am">1 A.M</string>
    <string name="time2am">2 A.M</string>
    <string name="time3am">3 A.M</string>
    <string name="time4am">4 A.M</string>
    <string name="time5am">5 A.M</string>
    <string name="time6am">6 A.M</string>
    <string name="time7am">7 A.M</string>
    <string name="time8am">8 A.M</string>
    <string name="time9am">9 A.M</string>
    <string name="time10am">10 A.M</string>
    <string name="time11am">11 A.M</string>
    <string name="time12am">12 A.M</string>

    <!-- Alerts -->

    <string name="drop_out_text">L\'application était inactive durant plus de 2 min. Vos réponses seront envoyées automatiquement pour traitement.</string>
    <string name="drop_out_text_ok">OK</string>
    <string name="finish_alert_text">Si vous cliquez sur "Envoyer" vos réponses seront envoyées automatiquement.</string>
    <string name="finish_alert_text_abandonner">Si vous cliquez sur "Abandonner" vos réponses seront envoyées automatiquement.</string>
    <string name="exercise_finish_text">Attention : si vous cliquez sur le bouton "retour" vos réponses seront envoyées automatiquement. Voulez vous vraiment quitter cette page?</string>
    <string name="exercise_alert_text">Vous avez déjà répondu à ces questions et vous ne pouvez pas répondre une deuxième fois.</string>
    <string name="exam_not_downloaded_alert">Vous devez télécharger l\'epreuve avant de pouvoir y participer. il est conseiller de vous connecter en wi-fi.</string>
    <string name="delete_event_alert">Attention, supprimer cette épreuvre vous empechera de faire l\'eppreuve ou d\'en consulter les resultats  et corrections i vous la supprimer.</string>
    <string name="exam_already_passed_alert">Cet examen est terminé ou vous l\'avez déjà passé vous ne pouvez pas le refaire.</string>
    <string name="exercise_finished_alert">La durée accordée pour cet exercice est écoulée.\nLes réponses que vous avez eu le temps d\'entrer ont été automatiquement sauvegardées.\nVous pouvez passer à un autre exercice.</string>

    <!-- Login -->

    <string name="login_username_text">Votre Identifiant Hermes</string>
    <string name="login_password_text">Votre Mot de passe Hermes</string>
    <string name="login_button_text">CONNEXION</string>
    <string name="wrong_login_data">N\'existe pas un tel utilisateur</string>

    <!-- Home -->

    <string name="home_my_profile">MON PROFIL</string>
    <string name="home_planning">PLANNING</string>
    <string name="home_examen">EXAMEN</string>
    <string name="home_entrainement">ENTRAINEMENT</string>
    <string name="home_resultats">RÉSULTAT</string>
    <string name="home_telechargement">TÉLÉCHARGEMENT</string>

    <!-- My Profile -->

    <string name="my_profile_name">Nom</string>
    <string name="my_profile_lastname">Prénom</string>
    <string name="my_profile_login">Identifiant</string>
    <string name="my_profile_groups">Mes groupes</string>
    <string name="my_profile_logout">CHANGER DE COMPTE</string>
    <string name="my_profile_email">Email</string>

    <!-- Plannig -->

    <string name="plannig_previous_week">SEMAINE PRÉCÉDENTE</string>
    <string name="plannig_next_week">SEMAINE SUIVANTE</string>
    <!-- Plannig Popup -->
    <string name="plannig_popup_donwload">Télécharger Maintenant</string>
    <string name="planning_avaible">Téléchargement : Disponible</string>
    <string name="planning_need_update">Téléchargement : Mettre à jour</string>
    <string name="planning_ok">Téléchargement : OK</string>
    <string name="planning_maintenant">Téléchargement maintenant</string>
    <string name="a_letter"> à </string>
    <string name="reponse">Réponse</string>

    <!-- Other -->
    <string name="no_internet_connection">Une connexion à internet est nécessaire pour consulter cette page</string>
    <string name="telecharger">Télécharger</string>
    <string name="resultTitle">Si votre correction n\'apparait pas, vérifiez que vous avez envoyé vos réponses à l\'épreuve.</string>

    <!-- Exam -->
    <string name="examen_avaible">Disponible</string>
    <string name="examen_not_avaible">Non disponible</string>
    <string name="need_update">Mettre à jour</string>
    <string name="download">Téléchargement</string>
    <string name="wrong_password">Incorrect mot de passe.</string>

    <!-- Note & Stats -->
    <string name="notes_stats_target">Me situer</string>
    <string name="notes_stats_moyenne">Moyenne</string>
    <string name="notes_stats_medianne">Medianne</string>
    <string name="notes_stats_points">Points</string>
    <string name="notes_stats_rang">RANG</string>
    <string name="notes_stats_nom">NOM</string>
    <string name="notes_stats_note">NOTE</string>
    <string name="notes_stats_test_global">TEST GLOBAL</string>

</resources>