<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:background="@color/app_main_color_dark" >

        <ImageView
                   android:layout_width="@dimen/header_logo_width"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/logo_with_text" >
        </ImageView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/main_menu_top_margin"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/homeButton1"
                android:layout_width="@dimen/main_menu_button_size"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/main_menu_image_size"
                    android:layout_height="@dimen/main_menu_image_size"
                    android:background="@drawable/home_profile" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/home_my_profile"
                    android:textColor="#0d5c7c"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/homeButton2"
                android:layout_width="@dimen/main_menu_button_size"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/main_menu_image_size"
                    android:layout_height="@dimen/main_menu_image_size"
                    android:background="@drawable/home_calendar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/home_planning"
                    android:textColor="#0d5c7c"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/homeButton3"
                android:layout_width="@dimen/main_menu_button_size"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/main_menu_image_size"
                    android:layout_height="@dimen/main_menu_image_size"
                    android:background="@drawable/home_examin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/home_examen"
                    android:textColor="#0d5c7c"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_menu_top_margin"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/homeButton4"
                android:layout_width="@dimen/main_menu_button_size"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/main_menu_image_size"
                    android:layout_height="@dimen/main_menu_image_size"
                    android:background="@drawable/home_entrainement" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/home_entrainement"
                    android:textColor="#0d5c7c"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/homeButton5"
                android:layout_width="@dimen/main_menu_button_size"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/main_menu_image_size"
                    android:layout_height="@dimen/main_menu_image_size"
                    android:background="@drawable/home_result" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/home_resultats"
                    android:textColor="#0d5c7c"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/homeButton6"
                android:layout_width="@dimen/main_menu_button_size"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/main_menu_image_size"
                    android:layout_height="@dimen/main_menu_image_size"
                    android:background="@drawable/home_arrow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/home_telechargement"
                    android:textColor="#0d5c7c"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>